[package]
name = "pie-driver-dummy"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Dummy driver — random tokens, no model load. Linked into pie-server for tests."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_driver_dummy_lib"
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.16"
libc = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"
