[package]
name = "pie-driver-dummy"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Direct local dummy driver used by runtime tests."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_driver_dummy_lib"
crate-type = ["rlib"]

[dependencies]
pie-driver-abi = { path = "../../interface/driver" }
pie-ptir = { path = "../../interface/ptir", features = ["eval"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.52", features = ["rt", "sync", "time"] }
