[package]
name = "pie-driver-dummy"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@icloud.com>"]
description = "Dummy driver — random tokens, no model load. Linked into pie-server for tests."
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]
name = "pie_driver_dummy_lib"
crate-type = ["staticlib", "rlib"]

[dependencies]
pie-bridge = { path = "../bridge" }
anyhow = "1.0"
bytemuck = "1.16"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[dev-dependencies]
tempfile = "3"
